package com.consultation.models;

public enum Role {
    ADMIN,
    MEDECIN,
    PATIENT
}
