package com.consultation.models;

public enum StatutCrenau {
    LIBRE,
    RESERVE,
    BLOQUE,
    OCCUPE
}