package com.consultation.models;

public enum StatutRDV {
    EN_ATTENTE,
    CONFIRME,
    ANNULE,
    TERMINE,
    ABSENT
}